fix: add scrollbar-gutter

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -10,6 +10,10 @@ body {
   &.is-modal-open {
     overflow: hidden;
   }
+
+  @include desktop {
+    scrollbar-gutter: stable;
+  }
 }
 
 .main {
